--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 </main>
 
       <footer class="footer">
-        <ul class="footer-links">
-
-          <center>
-          <img src="images/cc.png">
+        <center>
+          <img src="http://www.readailib.com/images/cc.png">
         </center>
         
+        <ul class="footer-links">
+
           <li>
             <a href="/index.xml" type="application/rss+xml" target="_blank">RSS feed</a>
           </li>
