--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 </main>
 
       <footer class="footer">
-        
+
         <center>
-          <img src="http://www.readailib.com/images/cc.png">
+          <img src="http://www.readailib.com/images/cc.png" width="88px">
         </center>
         
         <ul class="footer-links">
