改变评论系统

--- a/about/index.html
+++ b/about/index.html
@@ -75,11 +75,11 @@
 <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
 <script type="text/javascript">
       var gitalk = new Gitalk({
-        clientID: 'a75f104106de67ffe25c',
-        clientSecret: '8bf7379d4fe59db27c19e15f7feaab3cc4218809',
-        repo: 'readailib.github.io',
-        owner: 'readailib',
-        admin: ['readailib'],
+        clientID: 'a98bac7d9ab86f4813de',
+        clientSecret: '307c20444af8207286b5f78f7a5ed941786edad0',
+        repo: 'readailib',
+        owner: 'rh01',
+        admin: ['rh01'],
         body: location.href,
       });
       gitalk.render('gitalk-container');
