--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 
 <title>ReadAILib Official Website </title>
+<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 <meta property="og:title" content="ReadAILib Official Website ">
 <meta property="og:type" content="website">
 
