--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,7 @@
 
 <title>关于ReadAILib - ReadAILib Official Website </title>
 <meta property="og:title" content="关于ReadAILib - ReadAILib Official Website ">
+<meta property="og:author" content="关于ReadAILib - {        map[]}">
 
 
 
@@ -55,7 +56,7 @@
   <article class="article">
     
 
-    <h1 class="article-title">关于ReadAILib</h1>
+    <h1 class="article-title" style="text-align: center">关于ReadAILib</h1>
 
     
 
