--- a/about/index.html
+++ b/about/index.html
@@ -124,7 +124,8 @@ ga('send', 'pageview');
 
   <div id="gitalk-container"></div>
 </div>
-<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+
+<link rel="stylesheet" href="/css/gitalk.css" media="all">
 <style type="text/css">
 	
 .gt-container .gt-comment-admin .gt-header-comment .gt-comment-content {
