--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,9 @@ var _hmt = _hmt || [];
     
 
     <div class="article-content">
-      <p>这是<a href="http://github.com/readailib">@readailib</a>的官方网站，这个网站主要用于分享容器和集群等相关的文章，该网站由<a href="http://github.com/rh01">@rh01</a>创建及维护.</p>
+      <p><img src="http://olrs8j04a.bkt.clouddn.com/17-12-27/81195890.jpg" alt="" /></p>
+
+<p>这是<a href="http://github.com/readailib">@readailib</a>的官方网站，这个网站主要用于分享容器和集群等相关的文章，该网站由<a href="http://github.com/rh01">@rh01</a>创建及维护.</p>
 
 <p>本站博文均基于<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh">署名-非商业性使用-禁止演绎 4.0</a> 国际协议发布，若发现本站有任何侵犯您利益的内容，请及时邮件<sup class="footnote-ref" id="fnref:admin-readailib"><a rel="footnote" href="#fn:admin-readailib">1</a></sup> 或留言联系，我会第一时间删除所有相关内容。</p>
 <div class="footnotes">
