--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,9 @@ var _hmt = _hmt || [];
     
 
     <div class="article-content">
-      <p><img src="http://olrs8j04a.bkt.clouddn.com/17-12-27/81195890.jpg" alt="" /></p>
+      <p><center>
+<img src="http://olrs8j04a.bkt.clouddn.com/17-12-27/81195890.jpg" alt="" />
+</center></p>
 
 <p>这是<a href="http://github.com/readailib">@readailib</a>的官方网站，这个网站主要用于分享容器和集群等相关的文章，该网站由<a href="http://github.com/rh01">@rh01</a>创建及维护.</p>
 
