--- a/about/index.html
+++ b/about/index.html
@@ -104,7 +104,7 @@ var _hmt = _hmt || [];
 
 <h2 id="how-to-contributing-an-article">How to Contributing an article</h2>
 
-<p>如果你想要在这个博客写篇文章，请联系我们或者遵循我们的Guidelines<sup class="footnote-ref" id="fnref:-"><a rel="footnote" href="#fn:-">1</a></sup>.</p>
+<p>如果你想要在这个博客写篇文章或者参与到我的博客中来，请联系我们或者遵循我们的Guidelines<sup class="footnote-ref" id="fnref:-"><a rel="footnote" href="#fn:-">1</a></sup>.</p>
 
 <h2 id="important">Important!!!</h2>
 
