--- a/about/index.html
+++ b/about/index.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
 
 <ul>
 <li><a href="http://github.com/rh01">Heng-Heng Shen</a></li>
-<li><a href="http://github.com/rh01">Bing-Hao Jia</a></li>
+<li><a href="http://github.com/jiabinghao">Bing-Hao Jia</a></li>
 <li><a href="http://github.com/MARzhangyy">Yan-Yue Zhang</a></li>
 </ul>
 
