--- a/about/index.html
+++ b/about/index.html
@@ -89,15 +89,17 @@ var _hmt = _hmt || [];
 
 <ul>
 <li><a href="http://github.com/rh01">Heng-Heng Shen</a></li>
-<li><a href="http://github.com/jiabinghao">Bing-Hao Jia</a></li>
-<li><a href="http://github.com/MARzhangyy">Yan-Yue Zhang</a></li>
 </ul>
+
+<!-- - [Bing-Hao Jia](http://github.com/jiabinghao)
+- [Yan-Yue Zhang](http://github.com/MARzhangyy)
+-->
 
 <h2 id="statement-mission">Statement Mission</h2>
 
 <p>这是<a href="http://github.com/readailib">@readailib</a>的官方网站，这个网站主要用于分享容器和集群等相关的文章，该网站由<a href="http://github.com/rh01">@rh01</a>创建及维护.</p>
 
-<p>最近<a href="http://github.com/readailib">@ReadAILib</a>刚刚加入两个小伙伴<a href="http://github.com/jiabinghao">@jiabinghao</a>和<a href="http://github.com/MARzhangyy">@MARzhangyy</a>。他们将会不定时分享相关的学习笔记。</p>
+<p>最近<a href="http://github.com/readailib">@ReadAILib</a>刚刚加入两个小伙伴<a href="http://github.com/jiabinghao">@jiabinghao</a>和<a href="http://github.com/MARzhangyy">@MARzhangyy</a>。他们将会在未来分享相关的学习笔记。</p>
 
 <p><center>
 <img src="http://olrs8j04a.bkt.clouddn.com/17-12-27/81195890.jpg" alt="" />
