--- a/about/index.html
+++ b/about/index.html
@@ -102,7 +102,7 @@ var _hmt = _hmt || [];
 <p>最近<a href="http://github.com/readailib">@ReadAILib</a>刚刚加入两个小伙伴<a href="http://github.com/jiabinghao">@jiabinghao</a>和<a href="http://github.com/MARzhangyy">@MARzhangyy</a>。他们将会在未来分享相关的学习笔记。</p>
 
 <p><center>
-<img src="http://olrs8j04a.bkt.clouddn.com/17-12-27/81195890.jpg" alt="" />
+<img src="http://olrs8j04a.bkt.clouddn.com/18-1-6/43780772.jpg" alt="Figure1: Welcome to ReadAILib" />
 </center></p>
 
 <h2 id="how-to-contributing-an-article">How to Contributing an article</h2>
