change url for Heng-Heng Shen

--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@ var _hmt = _hmt || [];
 <h2 id="contributors">Contributors</h2>
 
 <ul>
-<li><a href="http://github.com/rh01">Heng-Heng Shen</a></li>
+<li><a href="http://www.shenhengheng.xyz">Heng-Heng Shen</a></li>
 </ul>
 
 <!-- - [Bing-Hao Jia](http://github.com/jiabinghao)
